// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Lines translation Should translate test line "Assert ... then continue" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then exit" 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "When passed",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "stop test",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "dictionary",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then fail" 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "When passed",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "fail",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "dictionary",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... then warn" 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "When passed",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "warn",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "dictionary",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Assert ... timeout ... then continue" 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Timeout",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "1s",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "dictionary",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept modal dialog only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Accept modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept modal dialog" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Accept modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept prompt dialog with text ... only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Message",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "prompt text",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "dictionary",
    },
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Accept modal dialog with message",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Accept prompt dialog with text ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Message",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "prompt text",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "dictionary",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Accept modal dialog with message",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Dismiss modal dialog only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Dismiss modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Dismiss modal dialog" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Dismiss modal dialog",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go back only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Go back",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go back" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Go back",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go forward only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Go forward",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Go forward" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Go forward",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Refresh only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Refresh",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Browser command: Refresh" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Refresh",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Clear app data" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Clear application data",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... every ... exactly ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Repeat",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "4",
                },
                Object {
                  "type": "text",
                  "value": "x",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Every",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "1.5s",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": Array [
        Object {
          "type": "text",
          "value": "Condition settings",
        },
      ],
      "type": "dictionary",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Click on ",
    },
    Object {
      "type": "bold",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " exactly ",
    },
    Object {
      "type": "bold",
      "value": "4",
    },
    Object {
      "type": "text",
      "value": "x",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... once" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Click on ",
    },
    Object {
      "type": "bold",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Click on ",
    },
    Object {
      "type": "bold",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on element ... until ... every ... max ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Repeat",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "6",
                },
                Object {
                  "type": "text",
                  "value": "x",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Every",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "5.7s",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": Array [
        Object {
          "type": "text",
          "value": "Condition settings",
        },
      ],
      "type": "dictionary",
    },
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Click on ",
    },
    Object {
      "type": "bold",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " until condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Click on position ... once" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Click on ",
    },
    Object {
      "type": "bold",
      "value": "position",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Comment" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "This is a comment",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Execute command ..." 1`] = `
Object {
  "children": Array [
    Object {
      "label": Array [
        Object {
          "type": "text",
          "value": "JavaScript expression",
        },
      ],
      "type": "code-block",
      "value": "someJS();",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Execute JavaScript expression",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to element ... only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Move pointer to ",
    },
    Object {
      "type": "bold",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to element ..." 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Move pointer to ",
    },
    Object {
      "type": "bold",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Move to position ..." 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Move pointer to ",
    },
    Object {
      "type": "bold",
      "value": "position",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open URL ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Exact URL",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "https://suite.st",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "dictionary",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Open URL",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open app at homepage" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Open application",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Open app at relative URL ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Relative path",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "/some/path",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "dictionary",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Open application at relative URL",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Poll URL ... until response is ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Poll URL",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "https://suite.st",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Until receive",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "expected response",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "dictionary",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Poll URL every 0.5s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... every ... exactly ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Repeat",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "2",
                },
                Object {
                  "type": "text",
                  "value": "x",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Every",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "3s",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": Array [
        Object {
          "type": "text",
          "value": "Condition settings",
        },
      ],
      "type": "dictionary",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Run test ",
    },
    Object {
      "type": "bold",
      "value": "Snippet 1",
    },
    Object {
      "type": "text",
      "value": " exactly ",
    },
    Object {
      "type": "bold",
      "value": "2",
    },
    Object {
      "type": "text",
      "value": "x",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... once" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Run test ",
    },
    Object {
      "type": "bold",
      "value": "Snippet 1",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Run test ",
    },
    Object {
      "type": "bold",
      "value": "Snippet 1",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Run snippet ... until ... every ... max ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Repeat",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "2",
                },
                Object {
                  "type": "text",
                  "value": "x",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Every",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "3s",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": Array [
        Object {
          "type": "text",
          "value": "Condition settings",
        },
      ],
      "type": "dictionary",
    },
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Run test ",
    },
    Object {
      "type": "bold",
      "value": "Snippet 1",
    },
    Object {
      "type": "text",
      "value": " until condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to element ... once" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Send text ",
    },
    Object {
      "type": "bold",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "bold",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window every ... exactly ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Repeat",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "2",
                },
                Object {
                  "type": "text",
                  "value": "x",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Every",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "1s",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": Array [
        Object {
          "type": "text",
          "value": "Condition settings",
        },
      ],
      "type": "dictionary",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Send text ",
    },
    Object {
      "type": "bold",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "bold",
      "value": "window",
    },
    Object {
      "type": "text",
      "value": " exactly ",
    },
    Object {
      "type": "bold",
      "value": "2",
    },
    Object {
      "type": "text",
      "value": "x",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window once" 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Send text ",
    },
    Object {
      "type": "bold",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "bold",
      "value": "window",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Send text ",
    },
    Object {
      "type": "bold",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "bold",
      "value": "window",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Send text ... to window until ... every ... max ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Repeat",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "4",
                },
                Object {
                  "type": "text",
                  "value": "x",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Every",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "1.2s",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": Array [
        Object {
          "type": "text",
          "value": "Condition settings",
        },
      ],
      "type": "dictionary",
    },
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Send text ",
    },
    Object {
      "type": "bold",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "bold",
      "value": "window",
    },
    Object {
      "type": "text",
      "value": " until condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Set text ... to element ... only if ..." 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "title": Array [
        Object {
          "type": "text",
          "value": "Application has exited",
        },
      ],
      "type": "condition",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Set text ",
    },
    Object {
      "type": "bold",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "bold",
      "value": "element",
    },
    Object {
      "type": "text",
      "value": " only if condition is met",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Set text ... to element ..." 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Set text ",
    },
    Object {
      "type": "bold",
      "value": "text to send",
    },
    Object {
      "type": "text",
      "value": " to ",
    },
    Object {
      "type": "bold",
      "value": "element",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Sleep ..." 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Sleep ",
    },
    Object {
      "type": "bold",
      "value": "2s",
    },
  ],
  "type": "test-line",
}
`;

exports[`Test Lines translation Should translate test line "Wait until ... max ... then continue" 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Timeout",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "1s",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "dictionary",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Assert: Application has exited",
    },
  ],
  "type": "test-line",
}
`;
